...
              pg.start();
              ctrl.startLevel(pg.level.value);
              Get.to(() => const GameScreen());
            },
          ),
          NeonDialogAction(
            label: 'play_now'.tr,
            color: NeonTheme.lime,
            onTap: () {
              pg.start();
              ctrl.startLevel(pg.level.value);
              Get.to(() => const GameScreen());
            },
...
